plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.2'
	id 'io.spring.dependency-management' version '1.1.0'
	id "com.google.protobuf" version "0.9.1"
}

group = 'com.flikendo'
version = '1.0'
sourceCompatibility = '17'

repositories {
	mavenCentral()
	mavenLocal()
	maven { url "https://packages.confluent.io/maven/" }
}

dependencies {
	// https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
	implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.21.9'
	// https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
	implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.3.2'
	// https://mvnrepository.com/artifact/io.confluent/kafka-protobuf-serializer
	implementation group: 'io.confluent', name: 'kafka-protobuf-serializer', version: '7.3.1'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb', version: '3.0.4'

	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Own libraries
	implementation group: 'com.flikendo', name: 'F_Diesel_Gas_msg_lib', version: '1.0'
}

protobuf {
	// Configure the protoc executable
	protoc {
		// Download from repositories
		artifact = 'com.google.protobuf:protoc:3.0.0'
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
